# zt1-engine

./: .gitignore  BUILD_ENGINE.bat  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.old  Command_Prompt.exe.lnk  New Text Document.txt  README.md  build_engine.py  build_log.txt  build_report.txt  desktop_fix.py  easy_build.bat  fetch_dlls.py  find_menu_file.py  find_objectives.py  fix_loader_crash.py  fix_runtime.py  fix_zt_engine.py  import_assets.py  launch_debug.bat  mapselec_lyt.txt  rebuild_x86.py  remove_git.py  restore_perfect_text.py  runtime_log.txt  scan_n_files.py  scenario_lyt.txt  setup_debug_mode.py  ultimate_fixer.py  zt_image_viewer.py  zt_preview_dump.py
engine-build-resources/: README.md  build_all.py  step1_clean.py  step2_patch.py  step3_build.py  step4_import.py  step5_setup.py
engine-build-resources/patches/archive/: 00_resource_manager_header.py  01_resource_manager.py  02_ini_reader.py  03_font_manager.py  04_loader.py  05_ztd_file.py  09_add_scroll_input.py  10_add_listbox_to_layout.py  11_update_main_with_scenarios.py  12_update_cmake.py  13_add_getelementbyid.py  14_add_getid_to_element.py  15_add_selection_actions.py  16_add_settext_to_uitext.py  17_add_text_wrapping.py
src/: AniFile.cpp  AniFile.cpp.backup  AniFile.cpp.bak  Animation.cpp  Animation.hpp  FontManager.cpp  FontManager.hpp  IniReader.cpp  Input.hpp  InputManager.cpp  PalletManager.cpp  PeFile.cpp  ResourceManager.cpp  ResourceManager.cpp.backup  ResourceManager.hpp  ScenarioManager.cpp  ScenarioManager.hpp  UserProfile.cpp  UserProfile.hpp  Window.cpp  ZtdFile.cpp  ZtdFile.hpp  main.cpp
src/Saved Game/: user.json
src/ui/: UiAction.hpp  UiButton.cpp  UiButton.hpp  UiElement.hpp  UiImage.cpp  UiImage.hpp  UiLayout.cpp  UiLayout.hpp  UiListBox.cpp  UiListBox.hpp  UiText.cpp  UiText.hpp
tools/: decode_button_animation.py  extract_ui.py  find_objectives.py  modify_ui.py  set_menu_x.py  setup_save.py  zt_map_dump.py  zt_sprite_viewer.py
